--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -2,9 +2,9 @@ name: .NET
 
 on:
   push:
-    branches: [ "develop" ]
+    branches: [ 'master', 'develop' ]
   pull_request:
-    branches: [ "develop" ]
+    branches: [ 'master', 'develop' ]
 
 jobs:
   build:
@@ -16,7 +16,7 @@ jobs:
     - name: Setup .NET
       uses: actions/setup-dotnet@v3
       with:
-        dotnet-version: 7.x.x
+        dotnet-version: 8.x.x
     - name: Restore dependencies
       run: dotnet restore
     - name: Build
