--- a/MomijiDriver/appsettings.Development.json
+++ b/MomijiDriver/appsettings.Development.json
@@ -2,7 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Momiji": "Trace",
+      "Momiji": "Information",
       "System": "Information",
       "Microsoft": "Information"
     }
