--- a/MomijiTest/appsettings.json
+++ b/MomijiTest/appsettings.json
@@ -15,49 +15,8 @@
       }
     }
   },
-  "AllowedHosts": "*",
 
-  "Momiji.Core.Configuration.Param": {
-    "BufferCount": 3,
-    "Local": false,
-    "Connect": true,
-    "Width": 800,
-    "Height": 600,
-    "TargetBitrate": 3200000,
-    "MaxFrameRate": 30.0,
-    "IntraFrameIntervalUs": 1000000,
-    "EffectName": "Synth1 VST.dll",
-    //"EffectName": "magical8bitPlug3.dll",
-    "SamplingRate": 48000,
-    "SampleLength": 0.06
-  },
-
-  "Momiji.Core.Dll.DllManager": {
-    "x86": {
-      "ftl.dll": "debug/ftl.dll",
-      "openH264.dll": "debug/openh264-2.0.0-win32.dll",
-      "opus.dll": "debug/opus-1.3.1-win32.dll"
-    },
-    "x64": {
-      "ftl.dll": "debug/ftl.dll",
-      "openH264.dll": "debug/openh264-2.0.0-win64.dll",
-      "opus.dll": "debug/opus-1.3.1-win64.dll",
-      "Synth1 VST.dll": "Synth1 VST64.dll"
-    }
-  },
-
-  "Momiji.Core.WorkQueue.WorkQueueManager": {
-    "UsageClass": "Pro Audio",
-    "BasePriority": 0,
-    "TaskId": 0
-  },
-
-  "Momiji.Core.WindowManager": {
-
-  },
-
-  "MIXER_STREAM_KEY": "xxxxxx",
-  //  "MIXER_INGEST_HOSTNAME": "ingest.wsss.live.glimesh.tv",
-  "MIXER_INGEST_HOSTNAME": "127.0.0.1",
-  "MIXER_USER_NAME": "testuser"
+  "Momiji.Core.Window.WindowManager": {
+    "CS": 3 //VREDRAW | HREDRAW
+  }
 }
