--- a/MomijiDriver/appsettings.json
+++ b/MomijiDriver/appsettings.json
@@ -2,7 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Momiji": "Trace",
+      "Momiji": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
@@ -14,7 +14,7 @@
     "TaskId": 0
   },
 
-  "Momiji.Core.WindowManager": {
-
+  "Momiji.Core.Window.WindowManager": {
+    "CS": 3 //VREDRAW | HREDRAW
   }
 }
