クラス分割検討中

--- a/MomijiTest/Properties/launchSettings.json
+++ b/MomijiTest/Properties/launchSettings.json
@@ -1,6 +1,6 @@
 {
   "profiles": {
-    "momijiXunit": {
+    "MomijiTest": {
       "commandName": "Project",
       "nativeDebugging": true
     }
