--- a/MomijiDriver/appsettings.json
+++ b/MomijiDriver/appsettings.json
@@ -2,7 +2,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Momiji": "Trace",
+      "Momiji": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
