サービス整理中

--- a/MomijiDriver/appsettings.Development.json
+++ b/MomijiDriver/appsettings.Development.json
@@ -14,7 +14,7 @@
     "TaskId": 0
   },
 
-  "Momiji.Core.Window.WindowManager": {
+  "Momiji.Core.Window.UIThread": {
     "CS": 3 //VREDRAW | HREDRAW
   }
 }
