--- a/MomijiDriver/MomijiDriver.csproj
+++ b/MomijiDriver/MomijiDriver.csproj
@@ -1,10 +1,11 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk.Worker">
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0-windows10.0.19041.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <RootNamespace>Momiji.Driver</RootNamespace>
     <UseWPF>true</UseWPF>
   </PropertyGroup>
 
