サービス整理中

--- a/MomijiTest/appsettings.json
+++ b/MomijiTest/appsettings.json
@@ -16,7 +16,7 @@
     }
   },
 
-  "Momiji.Core.Window.UIThread": {
+  "Momiji.Core.Window.WindowManager": {
     "CS": 3 //VREDRAW | HREDRAW
   }
 }
