--- a/Momiji/Momiji-Window.csproj
+++ b/Momiji/Momiji-Window.csproj
@@ -20,6 +20,9 @@
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
     <PackageReadmeFile>README.md</PackageReadmeFile>
     <GeneratePackageOnBuild>true</GeneratePackageOnBuild>
+  
+    <PublishReadyToRun>true</PublishReadyToRun>
+    <IsAotCompatible>true</IsAotCompatible>
   </PropertyGroup>
 
   <ItemGroup>
